# malloc-comparison

./: .gitignore  .gitmodules  README.md  common.mk  makefile  workloads.mk
analysis/: README.md  calculate.py  calculate_raw.py  merge_csvs.py  module.mk  plot.py
experiments/: module.mk  template.mk
experiments-singlethreaded/: module.mk  template.mk
mallocs/: CMakeLists.txt  CompilerFlags.cmake  REAME.md  module.mk
mallocs/dlmalloc/: CMakeLists.txt
mallocs/dlmalloc/include/: malloc.h  malloc.h.gch
mallocs/dlmalloc/src/: malloc.cc
results/: README.md  kv_to_csv.py  module.mk
scripts/: measureMetrics.sh  runBenchmark.py  runMalloc.py  setCpuMemoryAffinity.sh
